# topic_5_fastapi

./: .env.example  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
src/api/: trading_results_api.py
src/configs/: config.py
src/databases/: database.py
src/models/: trading_results_model.py
src/parser/: config.py  database.py  main.py  models.py  parser.py  save_to_database.py
src/schemas/: trading_result_schema.py
src/services/: cache_service.py
tests/: conftest.py  data.py  test_additional_function.py  test_api.py  test_db.py  test_models_schemas.py
