[project]
name = "topic-5-fastapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "bs4>=0.0.2",
    "fastapi[all]>=0.115.12",
    "lxml>=5.4.0",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.0",
    "redis>=6.1.0",
    "sqlalchemy>=2.0.41",
    "xlrd>=2.0.1",
]
